--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
   "autoload": {
     "psr-4": {
       "Bermuda\\Pipeline\\": "src/"
-    }
+    },
+    "files": [
+      "src/functions.php"
+    ]
   },
   "require": {
     "php": ">= 7.4",
