--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ]
   },
   "require": {
-    "php": ">= 7.4",
+    "php": ">= 7.4 | >= 8.0",
     "bermudaphp/config": "^1.0",
     "psr/http-server-middleware": "^1.0.1",
     "psr/http-factory": "^1.0.1"
