--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     ]
   },
   "require": {
-    "php": ">= 7.4 | >= 8.0",
-    "bermudaphp/config": "^1.0",
+    "php": "^7.4|^8.0|^8.1",
+    "bermudaphp/config": "^1.1.1",
     "psr/http-server-middleware": "^1.0.1",
     "psr/http-factory": "^1.0.1"
   }
