--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "autoload": {
     "psr-4": {
-      "Bermuda\\Pipeline\\": "src/"
+      "Bermuda\\Http\Middleware\\": "src/"
     },
     "files": [
       "src/functions.php"
