--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,24 @@
   "license": "MIT",
   "autoload": {
     "psr-4": {
-      "Bermuda\\Http\Middleware\\": "src/"
+      "Bermuda\\Http\\Middleware\\": "src/"
     },
     "files": [
       "src/functions.php"
     ]
+  },
+  "autoload-dev": {
+      "psr-4": {
+        "Bermuda\\Http\\Middleware\\Tests": "tests/"
+      }
   },
   "require": {
     "php": "^8.4",
     "bermudaphp/config": "^1.4",
     "psr/http-server-middleware": "^1.0.2",
     "psr/http-factory": "^1.0.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10.5"
   }
 }
