--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,28 @@
 {
   "name": "bermudaphp/pipeline",
+  "description": "PSR-15 middleware pipeline implementation for building composable HTTP request/response processing chains",
+  "type": "library",
   "license": "MIT",
+  "keywords": [
+    "psr-15",
+    "middleware",
+    "pipeline",
+    "http",
+    "psr-7",
+    "request-handler",
+    "php84"
+  ],
+  "require": {
+    "php": "^8.4",
+    "bermudaphp/config": "^2.0",
+    "psr/http-server-middleware": "^1.0.2",
+    "psr/http-server-handler": "^1.0",
+    "psr/http-message": "^2.0",
+    "psr/http-factory": "^1.0.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^11.5"
+  },
   "autoload": {
     "psr-4": {
       "Bermuda\\Http\\Middleware\\": "src/"
@@ -10,17 +32,17 @@
     ]
   },
   "autoload-dev": {
-      "psr-4": {
-        "Bermuda\\Http\\Middleware\\Tests": "tests/"
-      }
+    "psr-4": {
+      "Bermuda\\Http\\Middleware\\Tests\\": "tests/"
+    }
   },
-  "require": {
-    "php": "^8.4",
-    "bermudaphp/config": "^1.4",
-    "psr/http-server-middleware": "^1.0.2",
-    "psr/http-factory": "^1.0.1"
+  "config": {
+    "optimize-autoloader": true,
+    "sort-packages": true,
+    "allow-plugins": {
+      "*": true
+    }
   },
-  "require-dev": {
-    "phpunit/phpunit": "^10.5"
-  }
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
